--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,14 @@
 {
-  "builds": [{ "src": "index.py", "use": "@vercel/python" }],
-  "routes": [{ "src": "/(.*)", "dest": "index.py" }]
+  "builds": [
+    {
+      "src": "api/index.py",
+      "use": "@vercel/python"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api",
+      "dest": "api/index.py"
+    }
+  ]
 }
